change to cayman theme and update viz

--- a/Goodreads-Classics-Ratings-Standalone.html
+++ b/Goodreads-Classics-Ratings-Standalone.html
@@ -691,10 +691,8 @@
 
   <br>
   <br>
-  <hr>
-  <hr>
   <br>
-  <div class="content">
+  <div class="about">
     <p align="center"> About This Plot </p>
     <p>This plot displays the most popular "classic" literary texts according to <a href="https://www.goodreads.com/genres/classics"> Goodreads users </a>. The X-axis displays the publication date of the classic text. The Y-axis displays how many
       Goodreads ratings the classic text has received</p>
